# csc-2023

./: README.md  pyproject.toml
data/: datos_clase.csv  datos_clase_chatgpt.csv
notebooks/: 00_icsc_intro_a_python.ipynb  01_icsc_regresion.ipynb  01_python_analisis_datos_electorales.ipynb  02_analisis_frecuencias.ipynb  03_a_clasificacion.ipynb  04_llms.ipynb
