[tool.poetry]
name = "icsc-uba-2023"
version = "0.1.0"
description = ""
authors = ["Juan Manuel Pérez <jmperez.85@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.8.0"
ipywidgets = "^8.1.1"
numpy = "<1.25.0"
pandas = "<=1.9.0"
ipykernel = "^6.25.2"
scikit-learn = "^1.3.0"
statsmodels = "^0.14.0"
ISLP = "^0.3.19"
seaborn = "^0.12.2"
requests = "^2.31.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
